[project]
name = "langgraph-livekit-agents"
version = "0.0.1"
description = "LiveKit LangGraph adapter"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-community>=0.3.15",
    "langchain-openai>=0.3.1",
    "langgraph>=0.2.66",
    "livekit-agents>=1.0",
    "livekit-plugins-deepgram>=1.0",
    "livekit-plugins-openai>=1.0",
    "livekit-plugins-silero>=1.0",
    "livekit-plugins-cartesia>=1.0",
    "livekit-plugins-turn-detector>=1.0",
    "livekit-plugins-noise-cancellation>=0.2.0,<1.0.0",
    "python-dotenv>=1.0.1",
]
